--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,10 +2,10 @@ version: 0.2
 
 env:
   secrets-manager:
-    LOGIN: SonarCredentials:sonartoken
-    HOST: SonarCredentials:host
-    Organization: SonarCredentials:organization
-    Project: SonarCredentials:projectKey
+    LOGIN: SonarCredentials1:sonartoken
+    HOST: SonarCredentials1:host
+    Organization: SonarCredentials1:organization
+    Project: SonarCredentials1:projectKey
 
 phases:
   install:
